[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
telemetry = { path = "../telemetry" }
radius-core = { path = "../radius-core" }
